# boost_log_sample

./: .gitignore  README.md  client.cpp  cmake.md  logger.md  qiita.md  trivial.cpp
doc/: cmake.md  info.md  logger.md  user.md
mod1/: func.hpp  func1.cpp  logger.cpp
src/: CMakeLists.txt  channel.cpp  client.cpp  logger.cpp
src/mod1/: CMakeLists.txt  func.hpp  func1.cpp  func2.cpp
src/mod2/: CMakeLists.txt  func1.cpp  logger.cpp  logger.hpp  mod2.hpp
src/primary/: CMakeLists.txt  set_filter.cpp
